--- a/bundle/Resources/public/css/theme/views/content-creation.css
+++ b/bundle/Resources/public/css/theme/views/content-creation.css
@@ -5,6 +5,7 @@
 
 .ez-view-contentcreationview {
     text-align: left;
+    position: relative;
 }
 
 .ez-view-contentcreationview .cof-content-creation__header {
@@ -82,6 +83,7 @@
     background: #fdfdfd;
 }
 
+.ez-view-contentcreationview.is-loading:before,
 .ez-view-contentcreationview .is-loading:before {
     content: "";
     height: 100%;
@@ -91,8 +93,10 @@
     top: 0;
     left: 0;
     border-radius: 5px;
+    z-index: 5
 }
 
+.ez-view-contentcreationview.is-loading:after,
 .ez-view-contentcreationview .is-loading:after {
     content: '\f110';
     color: #3FB499;
@@ -101,6 +105,7 @@
     left: 50%;
     font-family: 'studiofont';
     animation: spin .7s infinite linear;
+    z-index: 5
 }
 
 .ez-view-contentcreationview .cof-btn--edit-location {
