--- a/bundle/Resources/public/css/views/discovery-create.css
+++ b/bundle/Resources/public/css/views/discovery-create.css
@@ -4,7 +4,7 @@
  */
 
 .ez-view-universaldiscoverycreateview .ez-view-contentcreationview {
-    margin: 1.7rem 0 0 .7rem;
+    margin: .7rem 0 0 0;
 }
 
 @media (max-width: 1400px) {
