EZP-27253: Impossible to scroll on the admin interface

--- a/bundle/Resources/public/css/views/content-creation.css
+++ b/bundle/Resources/public/css/views/content-creation.css
@@ -140,3 +140,7 @@
 .ez-view-contentcreationview .cof-content-creation__suggested-locations__item {
     padding: .3rem .5rem;
 }
+
+.ez-view-contentcreationview .ez-main-content {
+    height: 100%;
+}
