Fix EZP-27288: Create button is not visible in dashboard title bar

--- a/bundle/Resources/public/css/views/general.css
+++ b/bundle/Resources/public/css/views/general.css
@@ -3,6 +3,10 @@
  * For full copyright and license information view LICENSE file distributed with this source code.
  */
 
+.ez-view-container {
+    position: relative;
+}
+
 .cof-is-hidden {
     display: none !important;
 }
