--- a/bundle/Resources/public/css/views/content-creation.css
+++ b/bundle/Resources/public/css/views/content-creation.css
@@ -113,6 +113,7 @@
     overflow: auto;
 }
 
+.ez-view-contentcreationview .cof-content-creation__creator .ez-main-content,
 .ez-view-contentcreationview .ez-editactionbar-container {
     height: 100%;
 }
